# coqui

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REFERENCES.md
examples/toml_input_interface/: README.md
src/: configuration.hpp
src/IO/: AppAbort.hpp  app_loggers.cpp  app_loggers.h  fmt_extensions.hpp
src/arch/: _init.hpp  arch.cpp  arch.h
src/grids/: g_grids.hpp  grid_utils.hpp  r_grids.hpp
src/hamiltonian/: add_kinetic.cpp  add_kinetic.h  add_vloc.hpp  add_vxc.cpp  add_vxc.h  matrix_elements.h  one_body_hamiltonian.hpp  potentials.hpp  v_h.hpp
src/main/: main.cpp
src/mean_field/: CMakeLists.txt  MF.hpp  default_MF.hpp  distributed_orbital_readers.hpp  mf_gradient_t.cpp  mf_gradient_t.h  mf_source.hpp  mf_utils.hpp  properties.hpp
src/methods/: CMakeLists.txt  MBPT_drivers.cpp  MBPT_drivers.h  MBPT_gradient_drivers.cpp  MBPT_gradient_drivers.h
src/methods/gradient/: CMakeLists.txt  gradient_common.cpp  gradient_common.h  gradient_driver.cpp  gradient_driver.h
src/methods/gradient/tests/: CMakeLists.txt  test_chol_hf_grad.cpp
src/numerics/: CMakeLists.txt  nda_functions.hpp
src/numerics/ac/: AC_t.hpp  CMakeLists.txt  ac_context.h  ac_type_e.hpp
src/numerics/ac/pade/: pade_driver.hpp  pade_t.hpp
src/numerics/ac/pade/tests/: CMakeLists.txt  test_pade.cpp
src/numerics/imag_axes_ft/: CMakeLists.txt  IAFT.hpp  IAFT.icc  iaft_enum_e.hpp  iaft_utils.cpp  iaft_utils.hpp
src/numerics/imag_axes_ft/dlr/: dlr_driver.hpp  nda_linalg_compat.hpp
src/numerics/imag_axes_ft/dlr/tests/: CMakeLists.txt  test_dlr.cpp
src/numerics/imag_axes_ft/ir/: ir_driver.hpp
src/numerics/imag_axes_ft/ir/data/: gen_sparse_ir.py
src/numerics/imag_axes_ft/ir/tests/: test_ir.cpp
src/numerics/imag_axes_ft/tests/: test_iaft.cpp
src/orbitals/: orbital_generator.cpp  orbital_generator.h  pgto.cpp  pgto.h  rotate.cpp  rotate.h
src/potentials/: coulomb.hpp  potentials.hpp  potentials_impl.hpp
src/python/: __init__.py
src/scripts/: add_license_header.py  read_last_it.py
src/utilities/: FairDivide.hpp  Random.hpp  Timer.hpp  basis_set_utilities.hpp  catch_main.cpp  check.hpp  concepts.hpp  distributed_cholesky.hpp  fortran_helpers.f90  fortran_utilities.h  freemem.cpp  freemem.h  functions.hpp  harmonics.cpp  harmonics.h  index_map.hpp  integration.hpp  interpolation_utils.hpp  kpoint_utils.hpp  madelung_utils.hpp  math.cpp  math.h  mpi_context.cpp  mpi_context.h  occupations.hpp  parser.cpp  parser.h  proc_grid_partition.hpp  (+9 more)
src/wannier/: CMakeLists.txt  scdm.hpp  wan90.cpp  wan90.h  wan90_aux.hpp  wan90_utils.hpp
src/wannier/tests/: CMakeLists.txt  test_wannier.cpp
(+365 files in other folders)
